force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/ASL__AssureSign_Envelope_History__c.object-meta.xml
<CustomObject>
    <label>AssureSign Envelope History</label>
    <nameField>
        <displayFormat>EHST-{0000}</displayFormat>
        <label>AssureSign Envelope History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssureSign Envelope Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>