force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/fields/ASL__AssureSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>ASL__AssureSign_Envelope__c</fullName>
    <label>AssureSign Envelope</label>
    <referenceTo>ASL__AssureSign_Envelope__c</referenceTo>
    <relationshipLabel>AssureSign Envelope Histories</relationshipLabel>
    <relationshipName>AssureSign_Envelope_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>