force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/fields/ASL__Date__c.field-meta.xml
<CustomField>
    <fullName>ASL__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>