force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/fields/ASL__Details__c.field-meta.xml
<CustomField>
    <fullName>ASL__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>