force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/fields/ASL__Envelope_Name__c.field-meta.xml
<CustomField>
    <fullName>ASL__Envelope_Name__c</fullName>
    <formula>ASL__AssureSign_Envelope__r.ASL__Name__c</formula>
    <label>Envelope Name</label>
    <type>Text</type>
</CustomField>