force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/fields/ASL__ID__c.field-meta.xml
<CustomField>
    <fullName>ASL__ID__c</fullName>
    <description>AssureSign Envelope History ID</description>
    <externalId>true</externalId>
    <inlineHelpText>AssureSign Envelope History ID</inlineHelpText>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>