force-app/main/default/objects/ASL__AssureSign_Envelope_History__c/listViews/ASL__All.listView-meta.xml
<ListView>
    <fullName>ASL__All</fullName>
    <columns>NAME</columns>
    <columns>ASL__AssureSign_Envelope__c</columns>
    <columns>ASL__Envelope_Name__c</columns>
    <columns>ASL__ID__c</columns>
    <columns>ASL__Date__c</columns>
    <columns>ASL__Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>